addAPI
